--- a/popup.css
+++ b/popup.css
@@ -1,12 +1,17 @@
 body {
     width: 20rem;
+   /*  background-color: rgb(19, 18, 18);
+    color:white; */
+    padding: 20px;
+   
+    
 }
 
 div{
     text-align: center;
 }
 
-#dark-btn{
+/* #dark-btn{
     padding: 5px 10px;
     background-color: black;
     color: white;
@@ -26,4 +31,63 @@ div{
 }
 #light-btn:hover{
     font-size: 15px;
+} */
+
+
+#currency-container{
+    /* margin-top: 5px; */
+    border:1px solid #eab308;
+    border-radius: 5px;
+    box-shadow:5px 5px 5px 5px #888888 ;
+
+}
+#result{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color:#eab308;
+    font-weight: bold;
+}
+
+#amount{
+    /* margin-bottom: 1px solid blue; */
+    border: 0;
+    border-bottom: 2px solid #eab308;
+    color: black;
+    width: 80%;
+
+}
+ #old_currency{
+   
+    border-radius: 5px;
+    padding: 5px 0px;
+}
+ #currency{
+   
+    border-radius: 5px;
+    padding: 5px 0px;
+}
+
+
+
+.currency-select{
+    margin: 5px 0px;
+    display: flex;
+    gap: 3px;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20px;
+}
+
+#convert-btn{
+    margin: 0 20px;
+   width: 70%;
+    background-color: #eab308;
+    color: white;
+    border-radius: 5px;
+    margin-top: 5px;
+    font-weight: bold;
+    padding-top: 8px;
+    padding-bottom: 10px;
+    border: 0;
+    cursor: pointer;
 }
